--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# Cache and logs (Symfony2)
+
+    /.vscode/
+    /vendor/# Cache and logs (Symfony2)
 /app/cache/*
 /app/logs/*
 !app/cache/.gitkeep
