-Mise en place des fixtures : PlateformeFixtures, TypeplateformeFixtures, concensusFixtures, normeFixtures, utiliteFixtures. Ajout de 6 icone plateforme. Modificate entity PlateForme/LogoExchange/Compte. Rajout du tag Fixtures dans services.yaml

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -17,3 +17,6 @@ services:
     ICS\CryptoBundle\Form\:
         resource: "../src/Form"
         tags: ['controller.services_arguments']
+    ICS\CryptoBundle\DataFixtures\:
+        resource: "../src/DataFixtures"
+        tags: ['controller.service_arguments']
